Fix overflow

--- a/frontend/src/metabase/scaffolding/TableDetailView/TableDetailView.module.css
+++ b/frontend/src/metabase/scaffolding/TableDetailView/TableDetailView.module.css
@@ -44,6 +44,8 @@
   .Field {
     align-items: center;
     overflow: hidden;
+    flex-wrap: nowrap;
+    min-width: 0;
     gap: var(--mantine-spacing-md);
 
     .FieldName {
@@ -73,6 +75,7 @@
       }
 
       .FieldValue {
+        word-break: break-word;
         font-size: 1.0625rem;
         text-align: left;
       }
